Impl + decorator contract